# attic

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  all  config.toml  docker-compose.yml  files.db  files.db-shm  files.db-wal
.github/workflows/: ci.yml  release.yml
docker/: config.toml  entrypoint.sh
migrations/: 0001_jobs.sql  0002_jobs_dst_name.sql  0003_users.sql  0004_favorites.sql
src/: config.rs  main.rs  spa.rs  state.rs  util.rs
src/auth/: handlers.rs  mod.rs  model.rs  password.rs  rate_limit.rs  session.rs  store.rs
src/db/: mod.rs
src/favorites/: handlers.rs  mod.rs  model.rs  store.rs
src/fs/: download.rs  listing.rs  mod.rs  mutate.rs  resolve.rs  roots.rs  search.rs  upload.rs
src/jobs/: copy.rs  handlers.rs  mod.rs  model.rs  plan.rs  store.rs  worker.rs
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
web/src/api/: files.ts
web/src/components/: Breadcrumbs.tsx  FileList.tsx  RootPicker.tsx  index.ts
web/src/components/anchor-link/: anchor-link.tsx  index.ts
web/src/components/breadcrumbs/: breadcrumbs.tsx
web/src/components/files/: index.ts
web/src/domain/: helpers.ts  index.ts
web/src/domain/entities/: entry.ts  favorite.ts  index.ts  job.ts  root.ts  search.ts  upload.ts  user.ts
web/src/domain/hooks/: index.ts  useAdminUsers.ts  useAuth.ts  useClipboard.ts  useClipboardActions.ts  useClipboardShortcuts.ts  useDirectory.ts  useFavorites.ts  useFileOps.ts  useFilePreview.ts  useJobs.ts  useRecent.ts  useRoots.ts  useSearch.ts  useSelection.ts  useUploads.ts  useViewMode.ts
web/src/domain/service/: service.ts
web/src/features/: index.ts
web/src/features/admin/: accounts-page.tsx  helpers.ts  index.ts
web/src/hooks/: queries.ts
web/src/infrastructure/: index.ts
web/src/routes/: $root.$.tsx  __root.tsx  _app.tsx  index.tsx  login.tsx  signup.tsx
web/src/theme/: index.ts
(+251 files in other folders)
