[package]
name = "attic"
version = "0.1.0"
edition = "2024"
default-run = "attic"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
rand = "0.8.5"
nix = { version = "0.31.3", features = ["fs"] }
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
trash = "5.2.2"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4"] }
